push my portfoilo

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@layer base{
+    body{
+        color: white;
+        background-color: #0e0f34;
+    }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@layer components{
+    .menuLink {
+        @apply cursor-pointer hover:text-[yellow];
+    }
+    .tags{
+        background-color: #08abde ;
+        margin-right: 0.5rem;
+        margin-top: 0.5rem;
+        padding: 3px 10px;
+        display: inline-block;
+        color: white;
+        font-size: 12px;
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+
+    }
+
+    .tags:last-child{
+        margin-right: 0;
+    }
+
+    .tags:nth-child(2){
+        background-color: aquamarine;
+    }
+
+    .tags:nth-child(3){
+        background-color: rgb(237, 237, 14);
+    }
+
+    .tags:nth-child(4){
+        background-color: rgb(185, 11, 11);
+    }
 }
